Project1/force-app/main/default/objects/Comment__c/Comment__c.object-meta.xml
<CustomObject>
    <description>A comment on a post with text by a user. Has a score.</description>
    <label>Comment</label>
    <nameField>
        <label>Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>