Project1/force-app/main/default/objects/Comment__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The content of the comment</description>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>