Project1/force-app/main/default/objects/Comment__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <description>The Post this comment was made on</description>
    <label>Post</label>
    <referenceTo>Post__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>